# pulp-embed-juce

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
examples/standalone/: Main.cpp
examples/string-test/: main.cpp
include/: PulpEmbedComponent.h
src/: PulpEmbedComponent.cpp
